<resources>
    <string name="app_name">EmployeeManagement</string>
    <string name="main_label">Employee Management</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>
    <string name="enter_e_id">Enter employee id</string>
    <string name="login">Login</string>
    <string name="clock_in">Clock In</string>
    <string name="time_off">Time Off</string>
    <string name="day_of_the_week">Day of the week : </string>
    <string name="starting_time">Starting time :</string>
    <string name="ending_time">Ending Time :</string>
    <string name="day_value">Day Value</string>
    <string name="start_value">Start Value</string>
    <string name="title_activity_m_main">MMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="manage_schedules">Manage Schedules</string>
    <string name="modify_tab">Modify</string>
    <string name="post_tab">Post</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_last_name">Last Name</string>
    <string name="employee_first_name">First Name</string>
    <string name="employee_position">Position</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="eg_10_00_00">eg: 10:00:00</string>
    <string name="position_value">Position Value</string>
    <string name="position">Position:</string>
    <string name="days_of_the_week">Days of the week:</string>
    <string name="name">Name:</string>
    <string name="name_value">Name Value</string>
    <string name="end_time_value">End time</string>
    <string name="position_id">Position ID</string>
    <string name="employee_id">Employee ID</string>
    <string name="enter_position_id">Enter Position ID</string>
    <string name="post_schedule">Post Schedule</string>
    <string name="employee_name">Employee Name</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="clock_out">Clock Out</string>
    <string name="clocked_out">Already Clocked Out!</string>
    <string name="title_activity_manager_main">ManagerMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="test_time_off">This person has requested time off for date: 24/04/20</string>
</resources>
