<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manager.ui.main.PostScheduleFragment">

    <TextView
        android:id="@+id/post_posId"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/position_id"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/post_posId_edit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/position_id"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/post_posId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/post_emp_id"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/employee_id"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_posId"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/post_emp_id_value"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/enter_position_id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/post_emp_id"
        app:layout_constraintTop_toBottomOf="@+id/post_posId_edit"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/post_emp_name_value"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/employee_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/post_emp_name"
        app:layout_constraintTop_toBottomOf="@+id/post_emp_id_value"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/post_emp_name"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/employee_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_emp_id"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/post_position"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/position"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_emp_name"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/post_position_value"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/enter_position_id"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/post_position"
        app:layout_constraintTop_toBottomOf="@+id/post_emp_name_value"
        app:layout_constraintVertical_bias="0.05" />

    <!--    start time-->

    <TextView
        android:id="@+id/add_emp_start_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/start_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_position"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/add_emp_start_time_edit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/eg_10_00_00"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_emp_start_time"
        app:layout_constraintTop_toBottomOf="@+id/post_position_value"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/add_emp_end_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/end_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_emp_start_time"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/add_emp_end_time_edit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/eg_10_00_00"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_emp_end_time"
        app:layout_constraintTop_toBottomOf="@+id/add_emp_start_time_edit"
        app:layout_constraintVertical_bias="0.05" />

<!--    <ca.antonious.materialdaypicker.MaterialDayPicker-->
<!--        android:id="@+id/materialDayPicker"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/add_emp_end_time_edit"-->
<!--        app:layout_constraintVertical_bias="0.1" />-->

    <Button
        android:id="@+id/post_schedule_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/post_schedule"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_emp_end_time_edit"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>