<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="200dp"
    android:paddingTop="1dp"
    android:paddingBottom="1dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_margin="4dp"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/schedule_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_the_week"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/schedule_day_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_value"
            android:textStyle="normal"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/schedule_day"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/schedule_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_time"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/schedule_start_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/start_value"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/schedule_start_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/schedule_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ending_time"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toEndOf="@+id/schedule_start_value"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/schedule_end_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="End time value"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/schedule_end_time"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <LinearLayout
            android:id="@+id/linearLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <Button
                android:id="@+id/schedule_clock"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/clockIn"
                android:drawableStart="@drawable/clock_white"
                android:drawablePadding="2dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="30dp"
                android:singleLine="true"
                android:text="@string/clock_in"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:onClick="enterOrUpdateTime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/schedule_time_off"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:text="@string/time_off"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.626"
                app:layout_constraintStart_toEndOf="@+id/schedule_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>