<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/edit_full_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/employee_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/edit_full_name_value"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/employee_name"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toEndOf="@+id/edit_full_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <!--    start time-->
    <TextView
        android:id="@+id/edit_position"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/position"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_full_name"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/edit_position_value"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/position"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toEndOf="@+id/edit_position"
        app:layout_constraintTop_toBottomOf="@+id/edit_full_name_value"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/add_emp_start_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/start_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_position"
        app:layout_constraintVertical_bias="0.05" />

    <!--    end time-->

    <EditText
        android:id="@+id/edit_start_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/eg_10_00_00"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/add_emp_start_time"
        app:layout_constraintTop_toBottomOf="@id/edit_position_value"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/add_emp_end_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/end_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_emp_start_time"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/edit_end_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/eg_10_00_00"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/add_emp_end_time"
        app:layout_constraintTop_toBottomOf="@+id/edit_start_time"
        app:layout_constraintVertical_bias="0.05" />

    <ca.antonious.materialdaypicker.MaterialDayPicker
        android:id="@+id/edit_materialDayPicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_end_time"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/edit_schedule_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/edit_schedule"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_materialDayPicker"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/edit_delete_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/delete_schedule"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_schedule_button"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>